jps/jps-plugin/testData/incremental/withJava/javaUsedInKotlin/removeAnnotation/Main.kt
fun main() {
    val v = JavaClass()
    v.value = null //error
}